compiler/lume_hir/src/snapshots/lume_hir__lower__tests__generic_function_snapshots@constrained_generics.snap
---
source: compiler/lume_hir/src/lower.rs
description: "fn test<T1: Numeric, T2: Numeric>() -> void {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        1608888409088296675: Function(
            FunctionDefinition {
                id: 1608888409088296675,
                func_id: None,
                visibility: Private,
                name: test,
                parameters: [],
                type_parameters: [
                    TypeParameter {
                        name: Identifier {
                            name: "T1",
                            location: <internal>:8:10,
                        },
                        type_id: None,
                        type_param_id: None,
                        constraints: [
                            Type {
                                name: Numeric,
                                type_params: [],
                                location: <internal>:12:19,
                            },
                        ],
                        location: <internal>:8:10,
                    },
                    TypeParameter {
                        name: Identifier {
                            name: "T2",
                            location: <internal>:21:23,
                        },
                        type_id: None,
                        type_param_id: None,
                        constraints: [
                            Type {
                                name: Numeric,
                                type_params: [],
                                location: <internal>:25:32,
                            },
                        ],
                        location: <internal>:21:23,
                    },
                ],
                return_type: Some(
                    Type {
                        name: void,
                        type_params: [],
                        location: <internal>:39:43,
                    },
                ),
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:44:46,
                    },
                ),
                location: <internal>:0:46,
            },
        ),
    },
    statements: {},
    expressions: {},
}
