compiler/lume_hir/src/snapshots/lume_hir__lower__tests__generic_method_snapshots@constrained_generics.snap
---
source: compiler/lume_hir/src/lower.rs
description: "impl Test { fn test<T1: Numeric, T2: Numeric>() -> void {} }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        15340443703565705568: Impl(
            Implementation {
                id: 15340443703565705568,
                type_id: None,
                target: Type {
                    name: Test,
                    type_params: [],
                    location: <internal>:5:9,
                },
                methods: [
                    MethodDefinition {
                        method_id: None,
                        visibility: Private,
                        name: Identifier {
                            name: "test",
                            location: <internal>:15:19,
                        },
                        parameters: [],
                        type_parameters: [
                            TypeParameter {
                                name: Identifier {
                                    name: "T1",
                                    location: <internal>:20:22,
                                },
                                type_id: None,
                                type_param_id: None,
                                constraints: [
                                    Type {
                                        name: Numeric,
                                        type_params: [],
                                        location: <internal>:24:31,
                                    },
                                ],
                                location: <internal>:20:22,
                            },
                            TypeParameter {
                                name: Identifier {
                                    name: "T2",
                                    location: <internal>:33:35,
                                },
                                type_id: None,
                                type_param_id: None,
                                constraints: [
                                    Type {
                                        name: Numeric,
                                        type_params: [],
                                        location: <internal>:37:44,
                                    },
                                ],
                                location: <internal>:33:35,
                            },
                        ],
                        return_type: Some(
                            Type {
                                name: void,
                                type_params: [],
                                location: <internal>:51:55,
                            },
                        ),
                        block: Some(
                            Block {
                                statements: [],
                                location: <internal>:56:58,
                            },
                        ),
                        location: <internal>:12:58,
                    },
                ],
                type_parameters: [],
                location: <internal>:0:60,
            },
        ),
    },
    statements: {},
    expressions: {},
}
